--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
   <mat-card-title>Login</mat-card-title>
   <mat-card-content>
     <form (ngSubmit)="submit()">
@@ -34,3 +34,63 @@
     </form>
   </mat-card-content>
 </mat-card>
+ -->
+
+<div class="text-center" *ngIf="isLogged; else loggedOut">
+  <h2>Ya has iniciado sesión</h2>
+</div>
+
+<ng-template #loggedOut>
+  <div class="container d-flex justify-content-center">
+    <div class="card">
+      <div class="card-header">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/login">Iniciar Sesion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/signUp">Registrarse</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card-body">
+        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+          <div class="form-group">
+            <label for="username">Nombre de Usuario</label>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              class="form-control"
+              [(ngModel)]="username"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              class="form-control"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <button
+              class="btn btn-outline-success btn-block"
+              [disabled]="!f.valid"
+            >
+              <i class="material-icons">login</i>
+              Iniciar Sesion
+            </button>
+          </div>
+        </form>
+        <div *ngIf="f.submitted && isLoginFail" class="alert alert-danger mt-3">
+          Fallo en el login: {{ errMsj }}
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
