--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -12,6 +12,7 @@
     text-align: center;
     padding: 10px 20px;
     a {
+      cursor: pointer;
       color: rgba(255, 255, 255, 0.85);
     }
   }
@@ -20,6 +21,7 @@
     text-align: end;
     padding: 10px 20px;
     a {
+      cursor: pointer;
       color: rgba(255, 255, 255, 0.85);
     }
   }
