--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,1 +1,21 @@
-<p>signup works!</p>
+<div class="text-center" *ngIf="isLogged; else loggedOut">
+  <h2>ya has iniciado sesion</h2>
+</div>
+
+<ng-template #loggedOut>
+  <div class="container d-flex justify-content-center">
+    <div class="card">
+      <div class="card-header">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Iniciar Sesion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/registro">Registrarse</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card-body"></div>
+    </div>
+  </div>
+</ng-template>
