--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -8,14 +8,69 @@
       <div class="card-header">
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Iniciar Sesion</a>
+            <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" routerLink="/registro">Registrarse</a>
+            <a class="nav-link active" routerLink="/signUp">Crear Cuenta</a>
           </li>
         </ul>
       </div>
-      <div class="card-body"></div>
+      <div class="card-body">
+        <form #f="ngForm" (ngSubmit)="onRegister()" novalidate>
+          <div class="form-group">
+            <label for="name">Nombre</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="form-control"
+              [(ngModel)]="name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="username">Nombre de Usuario</label>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              class="form-control"
+              [(ngModel)]="username"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              class="form-control"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">Correo Electrónico</label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              class="form-control"
+              [(ngModel)]="email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <button
+              class="btn btn-outline-success btn-block"
+              [disabled]="!f.valid"
+            >
+              <i class="fas fa-sign-in-alt"></i> Crear Cuenta
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </ng-template>
